unpackaged/main/default/objects/ContactStaging2__c/ContactStaging2__c.object-meta.xml
<CustomObject>
    <label>Contact Staging 2</label>
    <nameField>
        <displayFormat>CS-{000000000}</displayFormat>
        <label>Contact Staging 2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Staging 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>