unpackaged/main/default/objects/ContactStaging2__c/fields/B2C_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_No__c</fullName>
    <label>B2C Customer No</label>
    <length>200</length>
    <type>Text</type>
</CustomField>