unpackaged/main/default/objects/ContactStaging2__c/fields/B2C_CustomerList_ID__c.field-meta.xml
<CustomField>
    <fullName>B2C_CustomerList_ID__c</fullName>
    <label>B2C CustomerList ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>