unpackaged/main/default/objects/ContactStaging2__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Calvin Klein</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>