unpackaged/main/default/objects/ContactStaging2__c/fields/Email_Interests__c.field-meta.xml
<CustomField>
    <fullName>Email_Interests__c</fullName>
    <label>Email Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Stores</fullName>
            </value>
            <value>
                <fullName>Tommy.com</fullName>
            </value>
            <value>
                <fullName>Anchor / Specialty Stores</fullName>
            </value>
            <value>
                <fullName>Mens</fullName>
            </value>
            <value>
                <fullName>Womens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>