unpackaged/main/default/objects/ContactStaging2__c/fields/Email_Optin_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Optin_Status__c</fullName>
    <label>Email Optin Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>