unpackaged/main/default/objects/ContactStaging2__c/fields/ForPointBalance__c.field-meta.xml
<CustomField>
    <fullName>ForPointBalance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Point Balance</label>
    <type>Checkbox</type>
</CustomField>