unpackaged/main/default/objects/ContactStaging2__c/fields/HomeStore__c.field-meta.xml
<CustomField>
    <fullName>HomeStore__c</fullName>
    <label>HomeStore</label>
    <length>80</length>
    <type>Text</type>
</CustomField>