unpackaged/main/default/objects/ContactStaging2__c/fields/isLoyaltyVerified__c.field-meta.xml
<CustomField>
    <fullName>isLoyaltyVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLoyaltyVerified</label>
    <type>Checkbox</type>
</CustomField>