unpackaged/main/default/objects/ContactStaging2__c/fields/Loyalty_Optin_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Optin_Date__c</fullName>
    <label>Loyalty Optin Date</label>
    <type>DateTime</type>
</CustomField>