unpackaged/main/default/objects/ContactStaging2__c/fields/LoyaltyOptInDate__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyOptInDate__c</fullName>
    <label>LoyaltyOptInDate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>