unpackaged/main/default/objects/ContactStaging2__c/fields/Seuqence__c.field-meta.xml
<CustomField>
    <fullName>Seuqence__c</fullName>
    <label>Seuqence</label>
    <length>20</length>
    <type>Text</type>
</CustomField>