unpackaged/main/default/objects/ContactStaging2__c/fields/SFSC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>SFSC_Account_Id__c</fullName>
    <label>SFSC Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>