unpackaged/main/default/objects/ContactStaging2__c/fields/SMSOptinStatus__c.field-meta.xml
<CustomField>
    <fullName>SMSOptinStatus__c</fullName>
    <label>SMS Opt-in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>