unpackaged/main/default/objects/ContactStaging2__c/fields/StoreOfCapture__c.field-meta.xml
<CustomField>
    <fullName>StoreOfCapture__c</fullName>
    <label>Store Of Capture</label>
    <length>80</length>
    <type>Text</type>
</CustomField>