unpackaged/main/default/objects/ContactStaging2__c/fields/Subscriber_Key__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Key__c</fullName>
    <label>WCS Subscriber Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>