unpackaged/main/default/objects/ContactStaging2__c/fields/Welcome_source__c.field-meta.xml
<CustomField>
    <fullName>Welcome_source__c</fullName>
    <label>Welcome source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>1-Overlay</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>2-Footer</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>3-My Account</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>4-Guest Checkout</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>CK CA Guest checkout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>