unpackaged/main/default/objects/ContactStaging2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Brand__c</columns>
    <columns>FileName__c</columns>
    <columns>Seuqence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>